--- a/mag_check/index.html
+++ b/mag_check/index.html
@@ -2,15 +2,26 @@
 
 <html>
 <head>
-    <link rel="stylesheet" href="/style.css"/>
+    <link rel="stylesheet" href="./css/style.css"/>
     <meta charset="UTF-8">
-    <meta name="description" content='Hub site for Magdalen'>
+    <meta name="description" content='Hub check in site for Magdalen'>
     <meta name="author" content="Connor B.">
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-    <link rel="icon" type="image/x-icon" href="/assets/photos/favicon.ico">
-    <title>Magdalen Hub</title>
+    <link rel="icon" type="image/x-icon" href="https://www.magdalenwichita.com/images/template/favicon.ico">
+    <title>Church of the magdalen, Wichita, KS</title>
 </head>
 <body>
-    
+    <div class="WIP">
+        <img src="https://www.magdalenwichita.com/images/stories/solutio/logo-2022.png" id="WIP_logo">
+        <p>W.I.P. LAST UPDATED 8/24/2023</p>
+    </div>
+    <div id="main_body">
+        <aside class="container intra_link">
+            <a>think</a>
+        </aside>
+        <div class="container">
+            <p>this</p>
+        </div>
+    </div>
 </body>
 </html>
