--- a/mag_check/index.html
+++ b/mag_check/index.html
@@ -15,13 +15,14 @@
         <img src="https://www.magdalenwichita.com/images/stories/solutio/logo-2022.png" id="WIP_logo">
         <p>W.I.P. LAST UPDATED 8/24/2023</p>
     </div>
+    <div class="topnav">
+        <a class="" href="#home"><img src="https://www.magdalenwichita.com/images/stories/solutio/logo-2022.png" id="nav_logo"></a>
+        <a href="#checkin/">Check In</a>
+        <a href="attendance/">Attendance</a>
+        <a href="https://www.magdalenwichita.com">Main Page</a>
+    </div>
     <div id="main_body">
-        <aside class="container intra_link">
-            <a>think</a>
-        </aside>
-        <div class="container">
-            <p>this</p>
-        </div>
+        
     </div>
 </body>
 </html>
