--- a/bash/index.html
+++ b/bash/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="assets/photos/favicon.ico">
-    <title>Document</title>
+    <title>Bash Index</title>
 </head>
 <body>
     <form action="/scripts/testexec.php">
